# referencer

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  requirements.txt
src/: README.md  pyproject.toml
src/app/: server.py
